syntax = "proto3";

package hello.rsocket.protobuf;

import "google/protobuf/empty.proto";

option java_package = "xyz.neopan.hello.rsocket.protobuf";
option java_outer_classname = "EchoServiceProto";
option java_multiple_files = true;

service EchoService {
  // Request / Response
  rpc RequestReply(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string request_message = 1;
}

message EchoResponse {
  string response_message = 1;
}
